# Projects_learning

./: CMakeLists.txt  config  main.out
Main/: main.cpp
Python_folder/: IC3.py  cats_dogs.py  find_countours.py  pu.py  sign.py  test.py  tr.py
Python_folder/event_image/: events.out.tfevents.1539862795.artem-VirtualBox  events.out.tfevents.1539865384.artem-VirtualBox  events.out.tfevents.1539867967.artem-VirtualBox  events.out.tfevents.1539868406.artem-VirtualBox  events.out.tfevents.1539868559.artem-VirtualBox  events.out.tfevents.1539868582.artem-VirtualBox  events.out.tfevents.1539869649.artem-VirtualBox  events.out.tfevents.1539869687.artem-VirtualBox
event_of_graphs/: events.out.tfevents.1539251620.artem-VirtualBox  events.out.tfevents.1539251961.artem-VirtualBox  events.out.tfevents.1539253257.artem-VirtualBox  events.out.tfevents.1539253290.artem-VirtualBox  events.out.tfevents.1539254039.artem-VirtualBox  events.out.tfevents.1539254190.artem-VirtualBox  events.out.tfevents.1539254211.artem-VirtualBox  events.out.tfevents.1539254254.artem-VirtualBox  events.out.tfevents.1539254539.artem-VirtualBox  events.out.tfevents.1539255096.artem-VirtualBox  events.out.tfevents.1539264990.artem-VirtualBox
include/: header.hpp
src/: CMakeLists.txt  header.cpp
